WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258509
[Curl] Coding style issue in ResourceResponse.h
https://bugs.webkit.org/show_bug.cgi?id=258509
Summary
[Curl] Coding style issue in ResourceResponse.h
Kenji Shukuwa
Reported
2023-06-26 00:20:37 PDT
ERROR: Source/WebCore/platform/network/curl/ResourceResponse.h:63: Inline functions should not be in classes annotated with WEBCORE_EXPORT. Remove the macro from the class and apply it to each appropriate method, or move the inline function definition out-of-line. [build/webcore_export] [4]
Attachments
Add attachment
proposed patch, testcase, etc.
Kenji Shukuwa
Comment 1
2023-06-26 00:34:45 PDT
Removing WEBCORE_EXPORT from a class means adding WEBCORE_EXPORT to many functions. However, if you remove the functions that hide status code checks such as isMovedPermanently and write the status code directly in the code like other ports, they will be unnecessary. I would like to refer to the SOUP port and modify the code.
Kenji Shukuwa
Comment 2
2023-06-26 00:37:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15287
EWS
Comment 3
2023-06-26 20:40:57 PDT
Committed
265537@main
(593b1ac94072): <
https://commits.webkit.org/265537@main
> Reviewed commits have been landed. Closing PR #15287 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2023-06-26 20:41:35 PDT
<
rdar://problem/111368722
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug