[Curl] Fix coding style issue in ResourceResponse.h https://bugs.webkit.org/show_bug.cgi?id=258509

Reviewed by Fujii Hironori.

Fix coding style issue in ResourceResponse.h.

* Source/WebCore/platform/network/curl/ResourceResponse.h:
(WebCore::ResourceResponse::isMovedPermanently const):
(WebCore::ResourceResponse::isFound const):
(WebCore::ResourceResponse::isSeeOther const):
(WebCore::ResourceResponse::isUnauthorized const):
(WebCore::ResourceResponse::isProxyAuthenticationRequired const):
(): Deleted.
* Source/WebCore/platform/network/curl/ResourceResponseCurl.cpp:
(WebCore::isAppendableHeader):
(WebCore::ResourceResponse::isAppendableHeader): Deleted.
(WebCore::ResourceResponse::shouldRedirect): Deleted.
(WebCore::ResourceResponse::isMovedPermanently const): Deleted.
(WebCore::ResourceResponse::isFound const): Deleted.
(WebCore::ResourceResponse::isSeeOther const): Deleted.
(WebCore::ResourceResponse::isNotModified const): Deleted.
(WebCore::ResourceResponse::isUnauthorized const): Deleted.
(WebCore::ResourceResponse::isProxyAuthenticationRequired const): Deleted.
* Source/WebKit/NetworkProcess/curl/NetworkDataTaskCurl.cpp:
(WebKit::NetworkDataTaskCurl::curlDidReceiveResponse):
(WebKit::NetworkDataTaskCurl::shouldStartHTTPRedirection):
* Source/WebKit/NetworkProcess/curl/NetworkDataTaskCurl.h:

Canonical link: https://commits.webkit.org/265537@main