Source/WebCore/platform/network/curl/ResourceResponseCurl.cpp
@@ -34,7 +34,7 @@
 
 namespace WebCore {
 
-bool ResourceResponse::isAppendableHeader(const String &key)
+static bool isAppendableHeader(const String &key)
 {
     static constexpr ASCIILiteral appendableHeaders[] = {
         "access-control-allow-headers"_s,
@@ -136,52 +136,6 @@ String ResourceResponse::platformSuggestedFilename() const
     if (contentDisposition.is8Bit())
         return String::fromUTF8WithLatin1Fallback(contentDisposition.characters8(), contentDisposition.length());
     return contentDisposition.toString();
-}
-
-bool ResourceResponse::shouldRedirect()
-{
-    auto statusCode = httpStatusCode();
-    if (statusCode < 300 || 400 <= statusCode)
-        return false;
-
-    // Some 3xx status codes aren't actually redirects.
-    if (statusCode == 300 || statusCode == 304 || statusCode == 305 || statusCode == 306)
-        return false;
-
-    if (httpHeaderField(HTTPHeaderName::Location).isEmpty())
-        return false;
-
-    return true;
-}
-
-bool ResourceResponse::isMovedPermanently() const
-{
-    return httpStatusCode() == 301;
-}
-
-bool ResourceResponse::isFound() const
-{
-    return httpStatusCode() == 302;
-}
-
-bool ResourceResponse::isSeeOther() const
-{
-    return httpStatusCode() == 303;
-}
-
-bool ResourceResponse::isNotModified() const
-{
-    return httpStatusCode() == 304;
-}
-
-bool ResourceResponse::isUnauthorized() const
-{
-    return httpStatusCode() == 401;
-}
-
-bool ResourceResponse::isProxyAuthenticationRequired() const
-{
-    return httpStatusCode() == 407;
 }
 
 }
